[metadata]
name = uberegg
version = 0.1.2
author = divtiply
description = Uber-egg (egg with dependencies) builder
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/divtiply/uberegg
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
py_modules = uberegg

[options.entry_points]
distutils.commands =
    bdist_uberegg = uberegg:bdist_uberegg
